--- a/build
+++ b/build
@@ -4,7 +4,7 @@ PROJECT="app"
 LICENSE="LICENSE.txt"
 MAJOR_VERSION="3"
 MINOR_VERSION="0"
-BUG_VERSION="5"
+BUG_VERSION="6"
 ZIP_FILE="appjs-v${MAJOR_VERSION}.zip"
 ZIP_DIR="appjs"
 AWS_BUCKET="cdn.kik.com"
@@ -65,8 +65,8 @@ BUILD_VERSION="${VERSION}.${BUILD_NUMBER}"
 
 BUILD_DIR="builds"
 BUILD_ZIP="${PROJECT}.zip"
-JS_COMPILER="yui-compressor --type js"
-CSS_COMPILER="yui-compressor --type css"
+JS_COMPILER="java -jar tools/yui-compressor.jar --type js"
+CSS_COMPILER="java -jar tools/yui-compressor.jar --type css"
 
 S3CMD="s3cmd -c ${AWS_CFG}"
 NO_CACHE="--add-header=Cache-Control:no-cache"
